--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -11,9 +11,7 @@
   },
   "cordova": {},
   "server": {
-    "url": "http://192.168.0.6:8102",
-    "cleartext": true,
-    "originalUrl": "http://192.168.0.6:8101",
-    "originalCleartext": true
+    "url": "http://192.168.0.6:8101",
+    "cleartext": true
   }
 }
