--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -9,11 +9,5 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {},
-  "server": {
-    "url": "http://192.168.0.6:8102",
-    "cleartext": true,
-    "originalUrl": "http://192.168.0.6:8101",
-    "originalCleartext": true
-  }
+  "cordova": {}
 }
