--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/lab": "3.2.9",
     "@ngrx/data": "10.0.0",
     "@ngrx/effects": "10.0.0",
     "@ngrx/entity": "10.0.0",
     "@ngrx/router-store": "10.0.0",
     "@ngrx/store": "10.0.0",
     "@ngrx/store-devtools": "10.0.0",
+    "cordova-plugin-ionic": "5.4.7",
+    "cordova-plugin-whitelist": "1.3.4",
+    "karma-junit-reporter": "2.0.1",
     "ngx-socket-io": "3.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
