--- a/.github/workflows/appflow.yml
+++ b/.github/workflows/appflow.yml
@@ -1,30 +1,57 @@
-name: Github Actions Example
+name: AppflowCI
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
-    pull_request:
-    push:
-        branches:
-            - master
-            - develop
+  push:
+    branches: [ master ]
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    #name the job
-    build:
-        # Set the type of machine to run on
-        runs-on: ubuntu-latest
+  test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-        strategy:   
-            steps:
-                # Checks out a copy of your repository on the ubuntu-latest machine
-                - name: Checkout code
-                  uses: actions/checkout@v2
-                - name: Build iOS on Appflow
-                uses: ionic-team/appflow-build@0.0.1
-                with:  
-                token: ${{ secrets.APPFLOW_TOKEN }}
-                app-id: abcdef12
-                platform: iOS
-                build-type: ad-hoc
-                certificate: MyCertificate
-                environment: MyEnvironment
-                upload-artifact: iOS-Build.zip
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 12.x
+      - run: npm ci
+      - run: npm test
+
+  build-ios:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Build iOS with Appflow
+        uses: ionic-team/appflow-build@v1
+        with:
+          token: ${{ secrets.IONIC_TOKEN }}
+          app-id: c46af4ba
+          platform: iOS
+          build-type: ad-hoc
+          environment: dev
+          native-config: dev
+          certificate: US Foods Dev
+          build-stack: macOS - 2020.09
+          filename: dev-${{ github.workflow }}.ipa
+          upload-artifact: iOS
+ 
+  build-live-update:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Build Live Update with Appflow
+        uses: ionic-team/appflow-build@v1
+        with:
+          token: ${{ secrets.IONIC_TOKEN }}
+          app-id: c46af4ba
+          platform: Web
+          environment: dev
