--- a/.github/workflows/appflow.yml
+++ b/.github/workflows/appflow.yml
@@ -29,7 +29,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Build iOS with Appflow
-        uses: ionic-team/appflow-build@v1
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.IONIC_TOKEN }}
           app-id: c46af4ba
@@ -49,7 +49,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Build Live Update with Appflow
-        uses: ionic-team/appflow-build@v1
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.IONIC_TOKEN }}
           app-id: c46af4ba
