--- a/.github/workflows/appflow.yml
+++ b/.github/workflows/appflow.yml
@@ -1,7 +1,7 @@
 name: AppflowCI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch test
+# events but only for the master branch
 on:
   push:
     branches: [ master ]
@@ -29,7 +29,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Build iOS with Appflow
-        uses: actions/checkout@v2
+        uses: ionic-team/appflow-build@v1
         with:
           token: ${{ secrets.IONIC_TOKEN }}
           app-id: c46af4ba
@@ -41,17 +41,3 @@ jobs:
           build-stack: macOS - 2020.09
           filename: dev-${{ github.workflow }}.ipa
           upload-artifact: iOS
- 
-  build-live-update:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: Build Live Update with Appflow
-        uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.IONIC_TOKEN }}
-          app-id: c46af4ba
-          platform: Web
-          environment: dev
