--- a/.github/workflows/appflow1.yml
+++ b/.github/workflows/appflow1.yml
@@ -41,5 +41,30 @@ jobs:
           build-stack: macOS - 2020.09
           filename: dev-${{ github.workflow }}.ipa
           upload-artifact: iOS
+  
+  build-live-update:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
- 
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Build Live Update with Appflow
+        uses: ionic-team/appflow-build@v1
+        with:
+          token: ${{ secrets.IONIC_TOKEN }}
+          app-id: 612354ef
+          platform: Web
+          environment: dev
+          build-live-update:
+            # The type of runner that the job will run on
+            runs-on: ubuntu-latest
+        
+            # Steps represent a sequence of tasks that will be executed as part of the job
+            steps:
+              - name: Build Live Update with Appflow
+                uses: ionic-team/appflow-build@v1
+                with:
+                  token: ${{ secrets.IONIC_TOKEN }}
+                  app-id: 612354ef
+                  platform: Web
+                  environment: dev
